--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.11.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "onnxruntime-web": "^1.21.0-dev.20250206-d981b153d3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/file-saver": "^2.0.7"
   }
 }
