--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
   "scripts": {
     "dev": "astro dev --host",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "astro preview --host",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.4.1",
-    "@imgly/background-removal": "^1.6.0",
+    "@imgly/background-removal": "1.5.5",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.11.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
-    "onnxruntime-web": "^1.21.0-dev.20250206-d981b153d3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11"
