--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "pre": "astro build && wait-on dist/index.html && astro preview",
+    "start": "astro build && wait-on dist/index.html && astro preview",
     "dev": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview --host",
