--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.4.1",
-    "@imgly/background-removal": "1.5.3",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.11.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
+    "lodash-es": "^4.17.21",
+    "ndarray": "^1.0.19",
+    "onnxruntime-web": "1.18.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/file-saver": "^2.0.7",
+    "@types/lodash-es": "^4.17.12",
+    "@types/ndarray": "^1.0.14",
+    "@types/node": "^24.1.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "wait-on": "^8.0.4"
